タスク名間違いを修正

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -24,4 +24,4 @@ jobs:
       - name: フォーマットチェック
         run: ./gradlew ktlintCheck
       - name: イベント仕様チェック
-        run: ./gradlew test
+        run: ./gradlew jvmTest
