--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -8,6 +8,7 @@ on:
       - opened
       - synchronize
       - reopened
+      - ready_for_review
 jobs:
   check:
     runs-on: ubuntu-latest
@@ -27,3 +28,14 @@ jobs:
         run: ./gradlew jvmTest
       - name: ドキュメントの生成
         run: ./gradlew run
+      - name: ファイル移動
+        run: |
+          cp ga913kmp/screens.md ./ && cp ga913kmp/actions.md ./
+      - name: イベント仕様書を PUSH する
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add .
+          git commit -m "イベント仕様書の更新"
+          git push origin HEAD
+        continue-on-error: true
