--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -12,11 +12,12 @@ on:
 jobs:
   check:
     runs-on: ubuntu-latest
+    if: ${{ !github.event.pull_request.draft }}
     timeout-minutes: 10
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0
+          ref: ${{ github.event.pull_request.head.ref }}
       - uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
